[package]
name = "prosic"
version = "2.1.0"
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>"]

[dependencies]
libprosic = { git = "https://github.com/prosic/libprosic.git", branch = "master" }
clap = {version = "2.24", features = ["yaml", "color", "suggestions"]}
rust-htslib = { git = "https://github.com/rust-bio/rust-htslib.git", branch="master" }
bio = { git = "https://github.com/rust-bio/rust-bio.git", branch="master" }
log = "0.3.*"
fern = "0.3.*"
csv = "0.14.*"
itertools = "0.4.*"
time = "*"
serde = "1.0"
serde_json = "1.0"
flame = { version = "^0.1.2", optional = true }
flamer = { version = "^0.1.2", optional = true }

[features]
default = []
flame_it = ["flame", "flamer", "libprosic/flame_it"]
gslv2 = ["libprosic/gslv2"]
